auto-cpu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: auto-cpu
  name: auto-cpu
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auto-cpu
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/webui-docker-default: "true"
        io.kompose.service: auto-cpu
    spec:
      containers:
        - env:
            - name: CLI_ARGS
              value: --no-half --precision full --allow-code --enable-insecure-extension-access --api
          image: jlockman3/sd-auto:1
          name: auto-cpu
          ports:
            - containerPort: 7860
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: auto-cpu-claim0
            - mountPath: /output
              name: auto-cpu-claim1
      restartPolicy: Always
      volumes:
        - name: auto-cpu-claim0
          persistentVolumeClaim:
            claimName: auto-cpu-claim0
        - name: auto-cpu-claim1
          persistentVolumeClaim:
            claimName: auto-cpu-claim1
status: {}
